@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.6
+    Translation of CVS Revision: 1.7
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -64,7 +64,7 @@ Vous pouvez l'envoyer par
 <input type="hidden" name="business" value="hanwen@xs4all.nl"/>
 <input type="hidden" name="item_name" value="LilyPond donation"/>
 <input type="hidden" name="currency_code" value="EUR">
-<input type="hidden" name="item_number" value="2005"/>
+<input type="hidden" name="item_number" value="2006"/>
 <input type="image"
 src="http://images.paypal.com/images/x-click-but02.gif" name="submit" alt="Make payments with PayPal - it's fast, free and secure!"/>
 </form>
