@@ -1,5 +1,5 @@
 <!--
-    Translation of CVS Revision: 1.25
+    Translation of CVS Revision: 1.26
     
     Translators must leave this comment in tact, but remove any dollar
     signs ($) from the CVS Revision indicator.
@@ -80,6 +80,19 @@
   href="@DOC@v2.6/examples.html">stable</a> et de
   <a href="@DOC@v2.7/examples.html">d&eacute;veloppement</a>.
 </p>
+
+<h3>Notation contemporaine</h3>
+
+Gr&acirc;ce &agrave; son interface ASCII et son design souple,
+LilyPond est id&eacute;al pour la <a href="new-notation.html">notation
+contemporaine et les partitions non standards</a>.
+
+<p>
+
+<center>
+<img src="@IMAGES@haddad-poetik3.png"> 
+</center>
+
 
 <h3>R&eacute;cup&eacute;rer de la musique en ligne</h3>
 
