@@ -1,3 +1,11 @@
+<!--
+    Translation of CVS $Revision$
+    
+    Translators must leave this comment in tact, but remove any dollar
+    signs ($) from the CVS Revision indicator.
+
+    When revising a translation, copy the CVS Revision number from the
+    original source file.  !-->
 
 <title>Strange Notation</title>
 
@@ -77,6 +85,6 @@ href="http://www.inkscape.org">Inkscape</a>
 
 
 <p>
-Back to the <a href="tour.html">tour</a>
+Back to the <a href="tour">tour</a>
 
 </body>
